Remove some checkbox items

--- a/index.html
+++ b/index.html
@@ -36,19 +36,15 @@
     </div>
     <div class="item">
       <input type="checkbox">
-      <p>Try to do it without any libraries</p>
+      <p>Done with 100% pure vanilla JavaScript!</p>
     </div>
     <div class="item">
       <input type="checkbox">
-      <p>Just regular JavaScript</p>
+      <p>That's it.</p>
     </div>
     <div class="item">
       <input type="checkbox">
-      <p>Good Luck!</p>
-    </div>
-    <div class="item">
-      <input type="checkbox">
-      <p>Don't forget to tweet your result!</p>
+      <p>Weeeeee!!</p>
     </div>
   </div>
 
